# stock-dashboard

./: LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/app/: db.py  main.py  predict.py
frontend/: Dockerfile  charts.js  dom.js  index.html  main.js  style.css
